# mcdowell-arc

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
crates/mcdowell-arc-core/: Cargo.toml  README.md  pyproject.toml
crates/mcdowell-arc-core/src/: lib.rs
docs/: ARCHITECTURE.md  SCIENTIFIC_MODEL.md  VALIDATION.md
examples/: sample_webcast.csv
scripts/: benchmark_monte_carlo.py
src/mcdowell_arc/: __init__.py  atmosphere.py  cli.py  constants.py  dynamics.py  fast.py  fit.py  frames.py  orbit.py
tests/: test_atmosphere.py  test_dynamics.py  test_fit_cli.py  test_frames.py
