[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcdowell-arc"
version = "0.1.0"
description = "Drag-aware ECI webcast trajectory fitting with uncertainty bounds."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Bryforge" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0"
]

[project.scripts]
mcdowell-arc = "mcdowell_arc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
