[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcdowell-arc"
version = "0.2.0"
description = "Drag-aware ECI webcast trajectory fitting with uncertainty bounds and optional Rust core."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Bryforge" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "build>=1.2",
  "maturin>=1.8"
]

[project.scripts]
mcdowell-arc = "mcdowell_arc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
